<resources>
    <string name="app_name">CFT BIN</string>
    <string name="insert_bin">БИН</string>
    <string name="find">Найти</string>
    <string name="no_internet">Отсутсвует подключение к интернету</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_user">Не удалось найти пользователя с данным БИН</string>
    <string name="enter_number">Введите подходящее число</string>
    <string name="scheme">Платёжная система</string>
    <string name="brand">Бренд</string>
    <string name="type">Тип</string>
    <string name="prepaid">Предоплаченная?</string>
    <string name="country">Страна</string>
    <string name="coordinates">Широта: %1$d, Долгота: %2$d</string>
    <string name="bank">Банк</string>
    <string name="bank_info">%1$s, г. %2$s</string>
    <string name="copied">Успешно скопировано</string>
    <string name="history">История запросов</string>
</resources>